SERVER-95244 fix tassert() failure for upsert run against direct shard connection (#27508)

GitOrigin-RevId: fdf49faf7c9643efe531e66b7b7fce112130a2ed